src/test/deca/context/invalid/Objet/this_noClass.des
this is only used inside class to refer the object